Rest api extended + tools and doc
